--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
       >
         <p
           id="errorMsg"
-          class="hidden backdrop-blur-[4px] bg-red-600/15 w-fit mx-auto py-1 px-4 mt-7 text-2xl text-slate-300"
+          class="hidden blurEffect text-center backdrop-blur-[8px] text-red-600 w-fit mx-auto py-1 px-4 mt-7 text-2xl md:text-4xl"
         >
-          Unable to fetch data
+          Unable to fetch data!!
         </p>
 
         <!--   Spinner   -->
@@ -92,7 +92,7 @@
 
         <section class="w-full lg:w-fit">
           <div
-            class="blurEffect w-[75%] space-y-0 sm:space-y-4 sm:w-[55%] md:w-[45%] lg:w-fit px-4 sm:px-8 py-3 mx-auto mt-10"
+            class="blurEffect w-[75%] space-y-0 sm:space-y-4 sm:w-[55%] md:w-[45%] lg:w-fit px-4 sm:px-8 py-3 mx-auto mt-10 hidden"
             id="currDataContainer"
           ></div>
         </section>
