--- a/index.html
+++ b/index.html
@@ -104,11 +104,12 @@
         ></section>
       </div>
     </main>
-    <script type="module" src="./index.js"></script>
-    <script type="module" src="./JS/weather.js"></script>
-    <script type="module" src="./JS/showMoreData.js"></script>
-    <script type="module" src="./JS/location.js"></script>
-    <script type="module" src="./JS/dropDown.js"></script>
+
+    <script src="./index.js"></script>
+    <script src="./JS/weather.js"></script>
+    <script src="./JS/showMoreData.js"></script>
+    <script src="./JS/location.js"></script>
+    <script src="./JS/dropDown.js"></script>
     <script
       src="https://kit.fontawesome.com/fd5db906e0.js"
       crossorigin="anonymous"
